--- a/src/pages/MainScreen/styles.css
+++ b/src/pages/MainScreen/styles.css
@@ -1,9 +1,45 @@
+@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;700&display=swap');
+
 body {
     background-color: hsl(228, 33%, 97%);
 }
 
+body, * {
+    box-sizing: border-box;
+    font-family: 'Rubik', sans-serif;
+    font-size: 16px;
+    margin: 0;
+}
+
 .container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    margin: 0 auto;
+    width: 735px;
+}
+
+.controller {
+    height: 100px;
+    margin: 0;
+}
+
+.response-container {
+    margin-left: 90px;
+    position: relative;
+    width: 645px;
+}
+
+.response-container::before {
+    content: '';
+    position: absolute;
+    background-color: hsl(223, 19%, 93%);
+    width: 2px;
+    height: 92%;
+    padding: 0;
+    top: 10px;
+    left: -45px;
+}
+
+@media only screen and (max-width: 740px) {
+    .container {
+        width: 80%;
+    }
 }
