--- a/src/components/Comment/styles.css
+++ b/src/components/Comment/styles.css
@@ -6,15 +6,15 @@
     grid-template-rows: auto 1fr;
     min-height: 168px;
     margin: 10px 0;
-    padding-right: 25px;
-    padding-top: 25px;
+    padding: 25px;
     width: 100%;
 }
 
-@media only screen and (max-width: 740px) {
+@media only screen and (max-width: 760px) {
     .comment-main {
         grid-template-columns: 1fr 1fr;
         grid-template-rows: auto auto auto;
-        width: 60%;
+        padding: 15px;
+        width: 100%;
     }
 }
