--- a/src/components/CommentData/styles.css
+++ b/src/components/CommentData/styles.css
@@ -2,7 +2,16 @@
     grid-area: 1/2/3/3;
 }
 
-@media only screen and (max-width: 740px) {
+.header-container {
+    align-items: center;
+    display: flex;
+    height: 35px;
+    grid-area: 1/3/2/4;
+    justify-content: flex-end;
+}
+
+
+@media only screen and (max-width: 760px) {
     .user-data {
         grid-area: 1/1/2/3;
     }
