--- a/src/components/CommentText/styles.css
+++ b/src/components/CommentText/styles.css
@@ -1,8 +1,9 @@
 .text-container {
     grid-area: 2/2/3/4;
+    margin: 20px 0px;
 }
 
-@media only screen and (max-width: 740px) {
+@media only screen and (max-width: 760px) {
     .text-container {
         grid-area: 2/1/3/3;
     }
