--- a/src/components/EditText/styles.css
+++ b/src/components/EditText/styles.css
@@ -1,14 +1,16 @@
 .response-area {
     border-radius: 5px;
-    min-height: 95px;
-    margin-right: 15px;
-    padding: 10px;
-    min-width: 530px;
+    min-height: 125px;
+    margin-bottom: 18px;
+    margin-top: 20px;
+    padding-left: 25px;
+    padding-right: 35px;
+    padding-top: 18px;
+    resize: none;
     overflow-y: visible;
 }
 
-.margin-bottom {
-    margin-bottom: 15px;
+.edit-container {
     display: flex;
     grid-area: 2/2/3/4;
     flex-direction: column;
@@ -16,5 +18,12 @@
 
 .right {
     align-self: flex-end;
+}
+
+@media only screen and (max-width: 760px) {
+    .edit-container {
+        grid-area: 2/1/3/3;
+        margin-bottom: 20px;
+    }
 }
 
