--- a/src/components/Response/styles.css
+++ b/src/components/Response/styles.css
@@ -8,25 +8,58 @@
     width: 105px;
 }
 
+.btn:hover {
+    background-color: hsl(239, 57%, 85%);
+}
+
+.img-container {
+    width: 65px;
+}
+
 .comment-area {
     border-radius: 5px;
     height: 95px;
     margin-right: 15px;
     padding: 10px;
-    width: 500px;
-}
-
-.resp-container {
-    background: white;
-    border-radius: 10px;
-    display: flex;
-    height: 145px;
-    margin: 10px 0;
-    padding-top: 25px;
-    width: 100%;
+    resize: none;
 }
 
 .response-form {
-    align-items: flex-start;
-    display: flex;
+    grid-template-columns: 1fr auto;
+    display: grid;
+    background: white;
+    border-radius: 10px;
+    grid-template-columns: auto 1fr auto;
+    display: grid;
+    min-height: 145px;
+    margin: 10px 0;
+    padding: 25px;
+    width: 100%;
+}
+
+@media only screen and (max-width: 760px) {
+
+    .response-form {
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 1fr auto;
+        padding: 15px;
+    }
+
+    .img-container {
+        grid-area: 2/1/3/2;
+    }
+
+    .comment-area {
+        grid-area: 1/1/2/3;
+        margin-right: 0;
+    }
+
+    .btn-grid {
+        grid-area: 2/2/3/3;
+        justify-self: end;
+    }
+
+    .comment-area {
+        margin-bottom: 25px;
+    }
 }
