--- a/src/components/VoteCounter/styles.css
+++ b/src/components/VoteCounter/styles.css
@@ -1,3 +1,4 @@
+
 .controls {
     height: 100px;
     width: 40px;
@@ -44,6 +45,11 @@
     text-align: center;
     width: 65px;
 }
+
+.active {
+    color: hsl(238, 40%, 52%);  
+}
+
 
 @media only screen and (max-width: 760px) {
     .vote-container {
